Fixed bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,6 @@ div.border div{
 }
 
 .overhead{
-	width:100%;
 	height:40px;
 	padding:5px;
 	background-color:rgba(50,50,50,0.1);
